# docs/swagger.yaml
@@ -1263,6 +1263,10 @@ definitions:
     type: object
   request.PrincipleAsset:
     properties:
+      asset_code:
+        example: SUZUKI,KMOBIL,GRAND VITARA.JLX 2,0 AT
+        maxLength: 200
+        type: string
       branch_id:
         example: "426"
         maxLength: 10
@@ -1370,6 +1374,7 @@ definitions:
         example: "2022-03-02"
         type: string
     required:
+    - asset_code
     - branch_id
     - brand
     - cc
@@ -1395,6 +1400,13 @@ definitions:
     - stay_since_year
     - stnk_expired_date
     - tax_date
+    type: object
+  request.PrincipleCoreCustomer:
+    properties:
+      user_information:
+        $ref: '#/definitions/request.UserInformation'
+    required:
+    - user_information
     type: object
   request.PrincipleElaborateLTV:
     properties:
@@ -1498,6 +1510,13 @@ definitions:
     - rw
     - user_information
     - zip_code
+    type: object
+  request.PrincipleMarketingProgram:
+    properties:
+      user_information:
+        $ref: '#/definitions/request.UserInformation'
+    required:
+    - user_information
     type: object
   request.PrinciplePembiayaan:
     properties:
@@ -3447,6 +3466,43 @@ paths:
             $ref: '#/definitions/response.ApiResponse'
       tags:
       - Search Inquiry
+  /api/v3/kmb/core-customer/{prospectID}:
+    post:
+      description: KmbPrinciple
+      parameters:
+      - description: Prospect ID
+        in: path
+        name: prospectID
+        required: true
+        type: string
+      - description: Body payload
+        in: body
+        name: body
+        required: true
+        schema:
+          $ref: '#/definitions/request.PrincipleCoreCustomer'
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            $ref: '#/definitions/response.ApiResponse'
+        "400":
+          description: Bad Request
+          schema:
+            allOf:
+            - $ref: '#/definitions/response.ApiResponse'
+            - properties:
+                error:
+                  $ref: '#/definitions/response.ErrorValidation'
+              type: object
+        "500":
+          description: Internal Server Error
+          schema:
+            $ref: '#/definitions/response.ApiResponse'
+      tags:
+      - KmbPrinciple
   /api/v3/kmb/elaborate:
     post:
       description: ElaborateLTV
@@ -3691,6 +3747,43 @@ paths:
             $ref: '#/definitions/response.ApiResponse'
       tags:
       - Insert Staging
+  /api/v3/kmb/marketing-program/{prospectID}:
+    post:
+      description: KmbPrinciple
+      parameters:
+      - description: Prospect ID
+        in: path
+        name: prospectID
+        required: true
+        type: string
+      - description: Body payload
+        in: body
+        name: body
+        required: true
+        schema:
+          $ref: '#/definitions/request.PrincipleMarketingProgram'
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            $ref: '#/definitions/response.ApiResponse'
+        "400":
+          description: Bad Request
+          schema:
+            allOf:
+            - $ref: '#/definitions/response.ApiResponse'
+            - properties:
+                error:
+                  $ref: '#/definitions/response.ErrorValidation'
+              type: object
+        "500":
+          description: Internal Server Error
+          schema:
+            $ref: '#/definitions/response.ApiResponse'
+      tags:
+      - KmbPrinciple
   /api/v3/kmb/produce/filtering:
     post:
       description: Produce Filtering via REST API
